--- a/style.css
+++ b/style.css
@@ -23,16 +23,16 @@ section {
     display: flex;
     flex-wrap: wrap;
     width: 150px;
-    border: 1px solid black ;
+    border: none ;
 }
 .cell {
     width: 50px;
     height: 50px;
-    border: 1px solid black;
     box-sizing: border-box;
     text-align: center;
     line-height: 50px;
     cursor: pointer;
+    font-size: 2em;
 }
 button {
     height: 30px;
