--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+*{
+    font-family: monospace;
+    font-weight: 900;
+}
+
 body {
-    font-family: cursive;
-    background-color: rgb(13, 96, 20);
+    background-color: #092731;
 }
 section {
     text-align: center;
@@ -15,6 +19,8 @@ section {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    background-color: #0f4e63;
+    color: white;
 }
 .game_title {
     padding-top: 25px;
@@ -23,7 +29,7 @@ section {
     display: flex;
     flex-wrap: wrap;
     width: 150px;
-    border: none ;
+    border: 1px solid white ;
 }
 .cell {
     width: 50px;
@@ -33,18 +39,19 @@ section {
     line-height: 50px;
     cursor: pointer;
     font-size: 2em;
+    border: 1px solid white;
 }
 button {
     height: 30px;
-    width: 50%;
+    width: 30%;
     border: none;
     border-radius: 10px;
     color: white;
-    background-color: rgb(13, 96, 20);
+    background-color: #156c89;
     cursor: pointer;
     margin-bottom: 20px;
 }
 button:hover {
     transition: 0.5s;
-    background-color:rgb(24, 171, 36) ;
+    background-color:#23b0e0 ;
 }
